<resources>
    <string name="app_name">Programming Languages Test</string>

    <string name="card_java_header">JAVA</string>
    <string name="card_c_header">C</string>
    <string name="card_c_plus_header">C++</string>
    <string name="card_c_sharp_header">C#</string>
    <string name="main_menu_img_description">Programming Languages Test App</string>
    <string name="main_menu_java_test">JAVA Test</string>
    <string name="main_menu_c_test">C Test</string>
    <string name="main_menu_c_plus_test">C++ Test</string>
    <string name="main_menu_c_sharp_test">C# Test</string>
    <string name="menu_questions">All Questions</string>
    <string name="menu_test">Test Simulator</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_review">Review Mistakes</string>
    <!-- strings in statistics fragment -->
    <string name="stat_title_java">JAVA</string>
    <string name="stat_title_c">C</string>
    <string name="stat_title_c_plus">C++</string>
    <string name="stat_title_c_sharp">C#</string>
    <string name="stat_clear">CLEAR</string>
    <!-- strings in exit dialog -->
    <string name="exit_ok">OK</string>
    <string name="exit_next">NEXT</string>
    <string name="exit_done">DONE</string>
    <string name="exit_cancel">Cancel</string>
    <string name="exit_confirm">Do you really want to quit test mode?</string>
    <!-- strings in test result dialog -->
    <string name="result_try_again">Try again</string>
    <string name="result_quit_test">Quit</string>
    <string name="result_status_passed">TEST PASSED</string>
    <string name="result_status_failed">TEST FAILED</string>
    <string name="result_status_statistics">STATISTICS</string>
    <!-- strings test result dialog -->
    <string name="answer_correct">CORRECT!</string>
    <string name="answer_wrong">INCORRECT!</string>
    <!-- strings in about dialog -->
    <string name="about_title">ABOUT</string>
    <string name="about_text">
        Programming Languages Test App
        \nVersion 0.2
        \nDeveloped by:
        \nMikhail Novozhilov
        \nEmail:
        \nnovomic@gmail.com
        \nQuestions were provided by
        \nhttp://www.indiabix.com/
    </string>
    <!-- stored preferences -->
    <string name="file_key_statistics_java">STATISTICS_JAVA</string>
    <string name="file_key_statistics_c">STATISTICS_C</string>
    <string name="saved_questions_count">QUESTIONS_TOTAL</string>
    <string name="saved_mistakes_count">MISTAKES_TOTAL</string>
    <string name="saved_average_score">AVERAGE_SCORE</string>
    <string name="saved_average_time">AVERAGE_TIME</string>
    <!-- strings in settings -->
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_remove_all">Clear all</string>
    <string name="action_remove_current">Remove question</string>
    <string name="time">Time: %1s</string>
</resources>
