<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/java_screen_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/main_menu_img_description"
            android:scaleType="fitXY"
            android:src="@drawable/jv_card"
            android:paddingTop="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

        <!-- material design flat button -->
        <!-- with icon on the left and centered text -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <!--<ImageView-->
                <!--android:id="@+id/iv_java_question"-->
                <!--android:layout_width="35dp"-->
                <!--android:layout_height="35dp"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:paddingLeft="10dp"-->
                <!--android:scaleType="fitCenter"-->
                <!--android:src="@drawable/ic_questions"-->
                <!--tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry" />-->

            <Button
                android:id="@+id/btn_menu_java_questions"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/menu_questions" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <!--<ImageView-->
                <!--android:id="@+id/iv_java_test"-->
                <!--android:layout_width="35dp"-->
                <!--android:layout_height="35dp"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:paddingLeft="10dp"-->
                <!--android:scaleType="fitCenter"-->
                <!--android:src="@drawable/ic_test"-->
                <!--tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry" />-->

            <Button
                android:id="@+id/btn_menu_java_test"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/menu_test" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <!--<ImageView-->
                <!--android:id="@+id/iv_java_review"-->
                <!--android:layout_width="35dp"-->
                <!--android:layout_height="35dp"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:paddingLeft="10dp"-->
                <!--android:scaleType="fitCenter"-->
                <!--android:src="@drawable/ic_review"-->
                <!--tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry" />-->

            <Button
                android:id="@+id/btn_menu_java_review"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/menu_review" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

    </LinearLayout>
</ScrollView>
