<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_main_java"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_java"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/btn_main_java"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_menu_java_test" />

        </RelativeLayout>

        <!-- separator -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

        <!-- Buttons with scaled images: -->
        <!-- RL was used to scale icons -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_main_c"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="15dp"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_c"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/btn_main_c"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_menu_c_test" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
            android:id="@+id/iv_main_c_plus"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="15dp"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_c_plus"
            tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/btn_main_c_plus"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_menu_c_plus_test" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
            android:id="@+id/iv_main_c_sharp"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="15dp"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_c_sharp"
            tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/btn_main_c_sharp"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_menu_c_sharp_test" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <!--<ImageView-->
                <!--android:id="@+id/iv_main_statistics"-->
                <!--android:layout_width="35dp"-->
                <!--android:layout_height="35dp"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_marginLeft="15dp"-->
                <!--android:layout_marginStart="15dp"-->
                <!--android:paddingLeft="10dp"-->
                <!--android:scaleType="fitCenter"-->
                <!--android:src="@drawable/ic_statistics"-->
                <!--tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry" />-->

            <Button
                android:id="@+id/btn_menu_statistics"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/menu_statistics" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

    </LinearLayout>

</ScrollView>
